--- a/node-mud/public/index.html
+++ b/node-mud/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>RockMUD</title>
+		<title>node-mud</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="HandheldFriendly" content="true" />
@@ -14,7 +14,7 @@
 				<div id="mudopen" class="row">
 					<div class="col-md-12">
 					
-						<h1 class="opening-title">RockMUD v0.4.0</h1>
+						<h2 class="opening-title">node-mud v1.0.0.0</h2>
 						<div class="subtext">
 						</div>
 					</div>
